// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeselField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel"
          value="2312"
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        Podany PESEL jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot 1`] = `
<input
  class="sc-crzoUp kUQhja"
  id="testId"
  label="Pesel"
  name="id_code"
  placeholder="Pesel"
  value=""
/>
`;

exports[`<PeselField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="id_code"
      >
        Pesel*
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp jQLlWv"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-iqAbSa dmIjtF"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd lIvqK"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-pNWxx iTQnTB"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <div
        class="sc-dIvqjp iaFmok"
      >
        <input
          class="sc-crzoUp kUQhja"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
